--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <header>
         <nav class="interface">
             <div id="name">
-                <div>
-                    <a href="#">Kaique Bifulgo</a>
+                <div id="logo">
+                    <a href="#"> Kaique Bifulgo </a>
                 </div>
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#">Sobre</a></li>
                 </ul>
             </div>
+            <button class="btn-contato">Contato</button>
         </nav>
     </header>
 </body>
