--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaique B dev</title>
     <link rel="stylesheet" href="css/styles.css">
+    <!-- ICONES -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- FIM ICONES -->
 </head>
 <body>
     <header>
@@ -25,5 +30,51 @@
             <button class="btn-contato">Contato</button>
         </nav>
     </header>
+    <!-- FIM DA NAV -->
+    <!-- COMEÇO DO MAIN -->
+     <main>
+        <section class="conteudo-principal">
+            <div class="interface">
+                <div class="flex">
+                    <div class="frase-principal">
+                        <h1>Kaique Bifulgo <br> Desenvolvedor Front-end<span>.</span></h1>
+                        <p>
+                            desenvolvedor front-end, apaixonado por construir interfaces que não só funcionam, 
+                            mas que também proporcionam uma experiência fluida e envolvente para o usuário.
+                        </p>
+                        <button class="btn-projetos">
+                            Ir para os projetos!
+                        </button>
+                        <button class="btn-baixar-cv">
+                            Baixar Cv!
+                        </button>
+                    </div>
+                    <div class="foto-principal">
+                        <img src="/img/Foto principal.jpeg" alt="Imagem do desenvolvedor">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FIM DA PRIMEIRA SECTION -->
+         <!-- COMEÇO DA SEGUNDA SECTION -->
+        <section class="Skills">
+            <div class="interface">
+                <h2 class="titulos-perso">Minhas <span>Skills</span>!</h2>
+                <div class="flex">
+                    <div class="tecnologias">
+                        <i class="fa-solid fa-code"></i>
+                        <h3>tecnologias</h3>
+                        <p>
+                            Tenho experiência em desenvolvimento Front-End com HTML, CSS e JavaScript, 
+                            criando interfaces interativas e responsivas. Utilizo React para construir aplicações 
+                            modernas e escaláveis, aproveitando seu ecossistema de componentes e gerenciamento de estado. 
+                            Além disso, sou familiarizado com o uso de Linux como ambiente de desenvolvimento, utilizando 
+                            ferramentas de linha de comando e automação para otimizar meu fluxo de trabalho.
+                        </p>
+                    </div>
+                </div>  
+            </div>
+        </section>
+     </main>
 </body>
 </html>
