parte sobre feito

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Meus diferenciais</a></li>
                     <li><a href="#">Projetos</a></li>
                     <li><a href="#">Sobre</a></li>
                 </ul>
@@ -59,20 +59,65 @@
          <!-- COMEÇO DA SEGUNDA SECTION -->
         <section class="Skills">
             <div class="interface">
-                <h2 class="titulos-perso">Minhas <span>Skills</span>!</h2>
+                <h2 class="titulos-perso">Meus <span>diferenciais</span>!</h2>
                 <div class="flex">
-                    <div class="tecnologias">
-                        <i class="fa-solid fa-code"></i>
-                        <h3>tecnologias</h3>
+                    <div class="skills-box">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <h3>Tecnologias</h3>
                         <p>
-                            Tenho experiência em desenvolvimento Front-End com HTML, CSS e JavaScript, 
+                            Tenho experiência em desenvolvimento Front-End com HTML, CSS e JavaScript,
                             criando interfaces interativas e responsivas. Utilizo React para construir aplicações 
-                            modernas e escaláveis, aproveitando seu ecossistema de componentes e gerenciamento de estado. 
-                            Além disso, sou familiarizado com o uso de Linux como ambiente de desenvolvimento, utilizando 
-                            ferramentas de linha de comando e automação para otimizar meu fluxo de trabalho.
+                            modernas e escaláveis.Além disso, sou familiarizado com o uso de Linux como ambiente de desenvolvimento, 
+                            utilizando ferramentas de linha de comando para otimizar meu fluxo de trabalho.
+                        </p>
+                    </div>
+                    <div class="skills-box">
+                        <i class="fa-solid fa-graduation-cap"></i>
+                        <h3>Formação</h3>
+                        <p>
+                            Minha formação em Análise e Desenvolvimento de Sistemas me proporcionou uma base sólida de 
+                            conhecimentos que vão muito além da programação, agregando valor ao meu trabalho como desenvolvedor 
+                            front-end.
+                        </p>
+                    </div>
+                    <div class="skills-box">
+                        <i class="fa-solid fa-book"></i>
+                        <h3>Curioso em</h3>
+                        <p>
+                            Apaixonado por aprender novas tecnologias e ferramentas que possam aprimorar minhas habilidades como 
+                            desenvolvedor. Cada nova tecnologia é uma oportunidade de expandir meu conhecimento
                         </p>
                     </div>
                 </div>  
+            </div>
+        </section>
+        <!-- FIM DA SEGUNDA SECTION -->
+        <!-- COMEÇO DA TERCEIRA SECTION -->
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="./img/imagem para o port.jpeg" alt="Imagem do programador">
+                    </div>
+                    <div class="sobre-texto">
+                        <h2>Muito prazer!</h2>
+                        <p>
+                            Olá! Sou um desenvolvedor front-end apaixonado por criar experiências digitais inovadoras e eficientes. 
+                            Com uma formação sólida em Análise e Desenvolvimento de Sistemas, possuo uma base técnica e abrangente. 
+                            Tenho experiência em desenvolver interfaces interativas e responsivas, utilizando as tecnologias mais 
+                            atuais como HTML, CSS, JavaScript e frameworks modernos como React.
+                        </p>
+                        <p>
+                            Sou movido pela curiosidade e pelo desejo constante de aprender. Adoro explorar novas tecnologias e 
+                            metodologias que possam melhorar meu trabalho e a experiência dos usuários. Acredito que o segredo para 
+                            um bom projeto é equilibrar a estética com a funcionalidade, criando soluções intuitivas e agradáveis.
+                        </p>
+                        <div class="social">
+                            <a href="https://github.com/KaiqueBifulgo"> <button> <i class="fa-brands fa-github"></i> </button> </a>
+                            <a href="https://www.linkedin.com/in/KaiqueBifulgo"> <button> <i class="fa-brands fa-linkedin"></i> </button> </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
      </main>
