parte portfolio feita

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaique B dev</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/sricpt.js" defer></script>
+    <!-- ICONE DO SITE -->
+    <link rel="shortcut icon" href="./img/Icone-Portfolio.ico" >
     <!-- ICONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
@@ -113,9 +116,27 @@
                             um bom projeto é equilibrar a estética com a funcionalidade, criando soluções intuitivas e agradáveis.
                         </p>
                         <div class="social">
-                            <a href="https://github.com/KaiqueBifulgo"> <button> <i class="fa-brands fa-github"></i> </button> </a>
-                            <a href="https://www.linkedin.com/in/KaiqueBifulgo"> <button> <i class="fa-brands fa-linkedin"></i> </button> </a>
+                            <a href="https://github.com/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-github"></i> </button> </a>
+                            <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-linkedin"></i> </button> </a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FIM DA SECTION -->
+        <!-- COMEÇO DA QUARTA SECTION -->
+        <section class="portfolio">
+            <div class="interface">
+                <h2 class="titulos-perso"> MEU <span> PORTFÓLIO. </span> </h2>
+                <div class="flex">
+                    <div class="img-port" id="projeto-1">
+                        <div class="nome-projeto"> Projeto 1</div>
+                    </div>
+                    <div class="img-port" id="projeto-2">
+                        <div class="nome-projeto"> Projeto 2</div>
+                    </div>
+                    <div class="img-port" id="projeto-3">
+                        <div class="nome-projeto"> Projeto 3</div>
                     </div>
                 </div>
             </div>
