footer quase feito e problema resolvido

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="interface">
             <div id="name">
                 <div id="logo">
-                    <a href="#"> Kaique Bifulgo </a>
+                    <a href="#"> <img src="/img/Logo site.png" alt="Logo"></a>
                 </div>
             </div>
             <div class="menu">
@@ -141,6 +141,44 @@
                 </div>
             </div>
         </section>
+        <!-- FIM DA QUARTA SECTION -->
+        <!-- COMEÇO DA QUINTA SECTION -->
+        <section class="contatos">
+            <div class="interface">
+                <h2 class="titulos-perso">MEUS <span>CONTATOS</span></h2>
+                <div class="flex">
+                    <ol class="teste">
+                        <li>TESTE</li>
+                        <li>TESTE</li>
+                        <li>TESTE</li>
+                        <li>TESTE</li>
+                        <li>TESTE</li>
+                        <li>TESTE</li>
+                        <li>TESTE</li>
+                        <li>TESTE</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
      </main>
+     <footer>
+        <div class="interface">
+            <div class="rodape-cima">
+                <div class="flex">
+                    <div class="logo-rodape">
+                        <img src="/img/Logo site.png" alt=" Logo">
+                    </div>
+                    <!-- FIM DA DIV LOGO -->
+                     <div class="social">
+                        <a href="https://github.com/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-github"></i> </button> </a>
+                        <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-linkedin"></i> </button> </a>
+                     </div>
+                </div>
+            </div>
+            <div class="rodape-baixo">
+                <p>Kaique Bifulgo</p>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
