atualização do footer

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="nome-projeto"> Projeto 2</div>
                     </div>
                     <div class="img-port" id="projeto-3">
-                        <div class="nome-projeto"> Projeto 3</div>
+                        <div class="nome-projeto"> Projeto <br> Blog Gamer</div>
                     </div>
                 </div>
             </div>
@@ -146,17 +146,11 @@
         <section class="contatos">
             <div class="interface">
                 <h2 class="titulos-perso">MEUS <span>CONTATOS</span></h2>
-                <div class="flex">
-                    <ol class="teste">
-                        <li>TESTE</li>
-                        <li>TESTE</li>
-                        <li>TESTE</li>
-                        <li>TESTE</li>
-                        <li>TESTE</li>
-                        <li>TESTE</li>
-                        <li>TESTE</li>
-                        <li>TESTE</li>
-                    </ol>
+                <div class="interface">
+                    <div class="table">
+                        <p> Meu github:<a href="https://github.com/KaiqueBifulgo"> KaiqueBifulgo</a> </p>
+                        <p> Meu Linkedin: <a href="https://www.linkedin.com/in/KaiqueBifulgo"> Kaique</a></p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -176,7 +170,7 @@
                 </div>
             </div>
             <div class="rodape-baixo">
-                <p>Kaique Bifulgo</p>
+                <p>Meus agradecimentos &copy;Kaique Bifulgo - 2024</p>
             </div>
         </div>
      </footer>
