funções da nav feitas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaique B dev</title>
+    <title>Portfólio Kaique B</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/sricpt.js" defer></script>
     <!-- ICONE DO SITE -->
@@ -19,24 +19,26 @@
         <nav class="interface">
             <div id="name">
                 <div id="logo">
-                    <a href="#"> <img src="/img/Logo site.png" alt="Logo"></a>
+                    <a href="#conteudo-principal"> <img src="/img/Logo site.png" alt="Logo"></a>
                 </div>
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Meus diferenciais</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#conteudo-principal">Inicio</a></li>
+                    <li><a href="#skills">Meus diferenciais</a></li>
+                    <li><a href="#portfolio">Projetos</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
                 </ul>
             </div>
-            <button class="btn-contato">Contato</button>
+            <button class="btn-contato">
+                <a href="#contatos">Contatos</a>
+            </button>
         </nav>
     </header>
     <!-- FIM DA NAV -->
     <!-- COMEÇO DO MAIN -->
      <main>
-        <section class="conteudo-principal">
+        <section id="conteudo-principal">
             <div class="interface">
                 <div class="flex">
                     <div class="frase-principal">
@@ -46,7 +48,7 @@
                             mas que também proporcionam uma experiência fluida e envolvente para o usuário.
                         </p>
                         <button class="btn-projetos">
-                            Ir para os projetos!
+                            <a href="#portfolio">Ir para os projetos!</a>
                         </button>
                         <button class="btn-baixar-cv">
                             Baixar Cv!
@@ -60,7 +62,7 @@
         </section>
         <!-- FIM DA PRIMEIRA SECTION -->
          <!-- COMEÇO DA SEGUNDA SECTION -->
-        <section class="Skills">
+        <section id="skills">
             <div class="interface">
                 <h2 class="titulos-perso">Meus <span>diferenciais</span>!</h2>
                 <div class="flex">
@@ -96,7 +98,7 @@
         </section>
         <!-- FIM DA SEGUNDA SECTION -->
         <!-- COMEÇO DA TERCEIRA SECTION -->
-        <section class="sobre">
+        <section id="sobre">
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
@@ -125,7 +127,7 @@
         </section>
         <!-- FIM DA SECTION -->
         <!-- COMEÇO DA QUARTA SECTION -->
-        <section class="portfolio">
+        <section id="portfolio">
             <div class="interface">
                 <h2 class="titulos-perso"> MEU <span> PORTFÓLIO. </span> </h2>
                 <div class="flex">
@@ -143,13 +145,13 @@
         </section>
         <!-- FIM DA QUARTA SECTION -->
         <!-- COMEÇO DA QUINTA SECTION -->
-        <section class="contatos">
+        <section id="contatos">
             <div class="interface">
-                <h2 class="titulos-perso">MEUS <span>CONTATOS</span></h2>
+                <h2 class="titulos-perso">MINHAS REDES E <span>CONTATOS</span></h2>
                 <div class="interface">
                     <div class="table">
-                        <p> Meu github:<a href="https://github.com/KaiqueBifulgo"> KaiqueBifulgo</a> </p>
-                        <p> Meu Linkedin: <a href="https://www.linkedin.com/in/KaiqueBifulgo"> Kaique</a></p>
+                        <p> Meu github:<a href="https://github.com/KaiqueBifulgo" target="_blank"> KaiqueBifulgo</a> </p>
+                        <p> Meu Linkedin: <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> Kaique</a></p>
                     </div>
                 </div>
             </div>
