--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a href="#portfolio">Ir para os projetos!</a>
                         </button>
                         <button class="btn-baixar-cv">
-                            Baixar Cv!
+                            <a href="/pdfs/CV_Kaique_front.pdf" download="Cv_KaiqueBifulgo"> Baixar Cv!</a>
                         </button>
                     </div>
                     <div class="foto-principal">
@@ -132,13 +132,15 @@
                 <h2 class="titulos-perso"> MEU <span> PORTFÓLIO. </span> </h2>
                 <div class="flex">
                     <div class="img-port" id="projeto-1">
-                        <div class="nome-projeto"> Projeto 1</div>
+                        <div class="nome-projeto"> Projeto <br> Montar treinos academia
+                            <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank">Link do projeto</a> 
+                        </div>
                     </div>
                     <div class="img-port" id="projeto-2">
-                        <div class="nome-projeto"> Projeto 2</div>
+                        <div class="nome-projeto"> Projeto <br> Blog semântico</div>
                     </div>
                     <div class="img-port" id="projeto-3">
-                        <div class="nome-projeto"> Projeto <br> Blog Gamer</div>
+                        <div class="nome-projeto"> Projeto <br> Criador de box shadow</div>
                     </div>
                 </div>
             </div>
