atualização de nav e projetos

--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
                 <h2 class="titulos-perso"> MEU <span> PORTFÓLIO. </span> </h2>
                 <div class="flex">
                     <div class="img-port" id="projeto-1">
-                        <div class="nome-projeto"> Projeto <br> Montar treinos academia
-                            <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank">Link do projeto</a> 
-                        </div>
+                        <div class="nome-projeto"> Projeto <br> Montar treinos academia</div>
                     </div>
                     <div class="img-port" id="projeto-2">
                         <div class="nome-projeto"> Projeto <br> Blog semântico</div>
@@ -143,6 +141,36 @@
                         <div class="nome-projeto"> Projeto <br> Criador de box shadow</div>
                     </div>
                 </div>
+                <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank" class="links-projetos">
+                    Link do projeto
+                </a>
+                <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank" class="links-projetos">
+                    Link do projeto
+                </a>
+                <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank" class="links-projetos">
+                    Link do projeto
+                </a>
+                  <div class="interface">
+                <div class="flex">
+                    <div class="img-port" id="projeto-4">
+                        <div class="nome-projeto"> Projeto <br> Raças de cães</div>
+                    </div>
+                    <div class="img-port" id="projeto-5">
+                        <div class="nome-projeto"> Projeto <br> Gerador de senha</div>
+                    </div>
+                    <div class="img-port" id="projeto-6">
+                        <div class="nome-projeto"> Projeto <br> Gerador de Qr Code</div>
+                    </div>
+                </div>
+                <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank" class="links-projetos">
+                    Link do projeto
+                </a>
+                <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank" class="links-projetos">
+                    Link do projeto
+                </a>
+                <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank" class="links-projetos">
+                    Link do projeto
+                </a>
             </div>
         </section>
         <!-- FIM DA QUARTA SECTION -->
