--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <li><a href="#sobre">Sobre</a></li>
                 </ul>
             </div>
-            <button class="btn-contato">
-                <a href="#contatos">Contatos</a>
-            </button>
+            <a href="#contatos" class="btn-contato">
+                <button class="btn-contato">Redes/Contatos</button>
+            </a>
         </nav>
     </header>
     <!-- FIM DA NAV -->
@@ -42,17 +42,17 @@
             <div class="interface">
                 <div class="flex">
                     <div class="frase-principal">
-                        <h1>Kaique Bifulgo <br> Desenvolvedor Front-end<span>.</span></h1>
+                        <h1>Kaique Bifulgo <br> Desenvolvedor <span>Front-end.</span></h1>
                         <p>
                             desenvolvedor front-end, apaixonado por construir interfaces que não só funcionam, 
                             mas que também proporcionam uma experiência fluida e envolvente para o usuário.
                         </p>
-                        <button class="btn-projetos">
-                            <a href="#portfolio">Ir para os projetos!</a>
-                        </button>
-                        <button class="btn-baixar-cv">
-                            <a href="/pdfs/CV_Kaique_front.pdf" download="Cv_KaiqueBifulgo"> Baixar Cv!</a>
-                        </button>
+                        <a href="#portfolio" class="btn-projetos">
+                            <button class="btn-projetos">Ir para os projetos!</button>
+                        </a>
+                        <a href="/pdfs/CV_Kaique_front.pdf" download="Cv_KaiqueBifulgo" class="btn-baixar-cv"> 
+                            <button class="btn-baixar-cv">Baixar Cv!</button>
+                        </a>
                     </div>
                     <div class="foto-principal">
                         <img src="/img/Foto principal.jpeg" alt="Imagem do desenvolvedor">
@@ -162,13 +162,13 @@
                         <div class="nome-projeto"> Projeto <br> Gerador de Qr Code</div>
                     </div>
                 </div>
-                <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank" class="links-projetos">
+                <a href="https://kaiquebifulgo.github.io/Pagina_com_lazy_loading/" target="_blank" class="links-projetos">
                     Link do projeto
                 </a>
-                <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank" class="links-projetos">
+                <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank" class="links-projetos">
                     Link do projeto
                 </a>
-                <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank" class="links-projetos">
+                <a href="https://kaiquebifulgo.github.io/Gerador_QR-Code/" target="_blank" class="links-projetos">
                     Link do projeto
                 </a>
             </div>
@@ -180,8 +180,8 @@
                 <h2 class="titulos-perso">MINHAS REDES E <span>CONTATOS</span></h2>
                 <div class="interface">
                     <div class="table">
-                        <p> Meu github:<a href="https://github.com/KaiqueBifulgo" target="_blank"> KaiqueBifulgo</a> </p>
-                        <p> Meu Linkedin: <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> Kaique</a></p>
+                        <p> Quer ver meu github?<a href="https://github.com/KaiqueBifulgo" target="_blank"> Clique aqui!!</a> </p>
+                        <p> Quer acessar meu Linkedin? <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> Clique aqui!!</a></p>
                     </div>
                 </div>
             </div>
