versao mobile em andamento

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                 <div class="flex">
                     <div class="img-port" id="projeto-1">
                         <div class="nome-projeto"> Projeto <br> Montar treinos academia</div>
+                        <p>Pagina dedicada a criar e organizar treinos!</p>
                     </div>
                     <div class="img-port" id="projeto-2">
                         <div class="nome-projeto"> Projeto <br> Blog semântico</div>
