menu mobile feito e script

--- a/index.html
+++ b/index.html
@@ -33,9 +33,29 @@
             <a href="#contatos" class="btn-contato">
                 <button class="btn-contato">Redes/Contatos</button>
             </a>
+            <div class="abrir-menu" id="btn-abrir-menu">
+                <i class="fa-solid fa-cable-car"></i>
+            </div>
         </nav>
+        <!-- FIM DA NAV DESKTOP -->
+        <!-- NAV MOBILE -->
+        <nav id="nav-mobile">
+            <div class="btn-fechar">
+                <i class="fa-regular fa-circle-xmark"></i>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#conteudo-principal">Inicio</a></li>
+                    <li><a href="#skills">Meus diferenciais</a></li>
+                    <li><a href="#portfolio">Projetos</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#contatos">Redes/Contatos</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- FIM DA NAV MOBILE -->
     </header>
-    <!-- FIM DA NAV -->
+    <!-- FIM DO HEADER -->
     <!-- COMEÇO DO MAIN -->
      <main>
         <section id="conteudo-principal">
@@ -44,7 +64,7 @@
                     <div class="frase-principal">
                         <h1>Kaique Bifulgo <br> Desenvolvedor <span>Front-end.</span></h1>
                         <p>
-                            desenvolvedor front-end, apaixonado por construir interfaces que não só funcionam, 
+                            Desenvolvedor front-end, apaixonado por construir interfaces que não só funcionam, 
                             mas que também proporcionam uma experiência fluida e envolvente para o usuário.
                         </p>
                         <a href="#portfolio" class="btn-projetos">
@@ -143,13 +163,13 @@
                     </div>
                 </div>
                 <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank" class="links-projetos">
-                    Link do projeto
+                    Projeto para montar treinos de academia
                 </a>
                 <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank" class="links-projetos">
-                    Link do projeto
+                    Projeto blog gamer
                 </a>
                 <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank" class="links-projetos">
-                    Link do projeto
+                    Projeto gerador de box shadow
                 </a>
                   <div class="interface">
                 <div class="flex">
@@ -164,13 +184,13 @@
                     </div>
                 </div>
                 <a href="https://kaiquebifulgo.github.io/Pagina_com_lazy_loading/" target="_blank" class="links-projetos">
-                    Link do projeto
+                    Projeto Blog com lazy loading
                 </a>
                 <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank" class="links-projetos">
-                    Link do projeto
+                    Projeto Gerador de senha
                 </a>
                 <a href="https://kaiquebifulgo.github.io/Gerador_QR-Code/" target="_blank" class="links-projetos">
-                    Link do projeto
+                    Projeto gerador de Qr-code
                 </a>
             </div>
         </section>
