--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
                         <p>Pagina dedicada a criar e organizar treinos!</p>
                     </div>
                     <div class="img-port" id="projeto-2">
-                        <div class="nome-projeto"> Projeto <br> Blog semântico</div>
+                        <div class="nome-projeto"> Projeto <br> Blog Gamer</div>
                     </div>
                     <div class="img-port" id="projeto-3">
                         <div class="nome-projeto"> Projeto <br> Criador de box shadow</div>
                     </div>
                 </div>
                 <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank" class="links-projetos">
-                    Projeto para montar treinos de academia
+                    Projeto para montar treinos
                 </a>
                 <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank" class="links-projetos">
-                    Projeto blog gamer
+                    Projeto blog semantico
                 </a>
                 <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank" class="links-projetos">
                     Projeto gerador de box shadow
