--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="interface">
             <div id="name">
                 <div id="logo">
-                    <a href="#conteudo-principal"> <img src="/img/Logo site.png" alt="Logo"></a>
+                    <a href="#conteudo-principal"> <img src="./img/Logo site.png" alt="Logo"></a>
                 </div>
             </div>
             <div class="menu">
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div class="foto-principal">
-                        <img src="/img/Foto principal.jpeg" alt="Imagem do desenvolvedor">
+                        <img src="./img/Foto principal.jpeg" alt="Imagem do desenvolvedor">
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
             <div class="rodape-cima">
                 <div class="flex">
                     <div class="logo-rodape">
-                        <img src="/img/Logo site.png" alt=" Logo">
+                        <img src="./img/Logo site.png" alt=" Logo">
                     </div>
                     <!-- FIM DA DIV LOGO -->
                      <div class="social">
