resolvendo bugs de imgs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="interface">
             <div id="name">
                 <div id="logo">
-                    <a href="#conteudo-principal"> <img src="img/Logo site.png" alt="Logo"></a>
+                    <a href="#conteudo-principal"> <img src="./img/Logo site.png" alt="Logo"></a>
                 </div>
             </div>
             <div class="menu">
@@ -153,7 +153,6 @@
                 <div class="flex">
                     <div class="img-port" id="projeto-1">
                         <div class="nome-projeto"> Projeto <br> Montar treinos academia</div>
-                        <p>Pagina dedicada a criar e organizar treinos!</p>
                     </div>
                     <div class="img-port" id="projeto-2">
                         <div class="nome-projeto"> Projeto <br> Blog Gamer</div>
