--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div class="foto-principal">
-                        <img src="img/Foto principal.jpeg" alt="Imagem do desenvolvedor">
+                        <img src="./img/Foto principal.jpeg" alt="Imagem do desenvolvedor">
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="img/imagem para o port.jpeg" alt="Imagem do programador">
+                        <img src="./img/imagem para o port.jpeg" alt="Imagem do programador">
                     </div>
                     <div class="sobre-texto">
                         <h2>Muito prazer!</h2>
@@ -152,12 +152,27 @@
                 <h2 class="titulos-perso"> MEU <span> PORTFÓLIO. </span> </h2>
                 <div class="flex">
                     <div class="img-port" id="projeto-1">
+                        <style>
+                            #projeto-1 {
+                                 background-image: url("./img/Projeto-academia.png");
+                            }
+                        </style>
                         <div class="nome-projeto"> Projeto <br> Montar treinos academia</div>
                     </div>
                     <div class="img-port" id="projeto-2">
+                        <style>
+                            #projeto-2 {
+                                 background-image: url("./img/Blog-Semantico.png");
+                            }
+                        </style>
                         <div class="nome-projeto"> Projeto <br> Blog Gamer</div>
                     </div>
                     <div class="img-port" id="projeto-3">
+                        <style>
+                            #projeto-3 {
+                                background-image: url("./img/Projeto-Box.png");
+                            }
+                        </style>
                         <div class="nome-projeto"> Projeto <br> Criador de box shadow</div>
                     </div>
                 </div>
@@ -173,12 +188,27 @@
                   <div class="interface">
                 <div class="flex">
                     <div class="img-port" id="projeto-4">
+                        <style>
+                            #projeto-4 {
+                                 background-image: url("./img/Blog-Pets.png");
+                            }
+                        </style>
                         <div class="nome-projeto"> Projeto <br> Raças de cães</div>
                     </div>
                     <div class="img-port" id="projeto-5">
+                        <style>
+                            #projeto-5 {
+                                 background-image: url("./img/Gerador-de-senha.png");
+                            }
+                        </style>
                         <div class="nome-projeto"> Projeto <br> Gerador de senha</div>
                     </div>
                     <div class="img-port" id="projeto-6">
+                        <style>
+                            #projeto-6 {
+                                background-image: url("./img/Gerador-qr-code.png");
+                            }
+                        </style>
                         <div class="nome-projeto"> Projeto <br> Gerador de Qr Code</div>
                     </div>
                 </div>
@@ -212,7 +242,7 @@
             <div class="rodape-cima">
                 <div class="flex">
                     <div class="logo-rodape">
-                        <img src="img/Logo site.png" alt=" Logo">
+                        <img src="./img/Logo site.png" alt=" Logo">
                     </div>
                     <!-- FIM DA DIV LOGO -->
                      <div class="social">
