corrigindo link cv

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="#portfolio" class="btn-projetos">
                             <button class="btn-projetos">Ir para os projetos!</button>
                         </a>
-                        <a href="/pdfs/CV_Kaique_front.pdf" download="Cv_KaiqueBifulgo" class="btn-baixar-cv"> 
+                        <a href="./pdfs/CV_Kaique_front.pdf" download="Cv_KaiqueBifulgo" class="btn-baixar-cv"> 
                             <button class="btn-baixar-cv">Baixar Cv!</button>
                         </a>
                     </div>
