Correção de nomes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Kaique B</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/sricpt.js" defer></script>
+    <script src="js/script.js" defer></script>
     <!-- ICONE DO SITE -->
     <link rel="shortcut icon" href="./img/Icone-Portfolio.ico" >
     <!-- ICONES -->
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div class="foto-principal">
-                        <img src="./img/Foto principal.jpeg" alt="Imagem do desenvolvedor">
+                        <img src="./img/Foto principal.jpeg" alt="Imagem do desenvolvedor" loading="lazy">
                     </div>
                 </div>
             </div>
